cluster/apps/external-services/truenas/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
subsets:
  - addresses:
      - ip: 192.168.30.4
    ports:
      - name: http
        port: 80
        protocol: TCP
